{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 92,
  "lineage": "1ba6003d-e5ad-4a27-57ce-29f274d1d69e",
  "resources": [
    {
      "module": "module.aws_vpc_prod",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:757187952603:internet-gateway/igw-00284a6f818b97311",
            "id": "igw-00284a6f818b97311",
            "owner_id": "757187952603",
            "tags": {
              "Name": "Prod"
            },
            "tags_all": {
              "Name": "Prod"
            },
            "vpc_id": "vpc-043053cdc23f5c0b8"
          },
          "dependencies": [
            "module.aws_vpc_prod.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc_prod",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:757187952603:route-table/rtb-06cd349ca1ccbca1e",
            "id": "rtb-06cd349ca1ccbca1e",
            "owner_id": "757187952603",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00284a6f818b97311",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTable"
            },
            "tags_all": {
              "Name": "PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-043053cdc23f5c0b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc_prod.aws_internet_gateway.igw",
            "module.aws_vpc_prod.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc_prod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03825fb90badd6c72",
            "route_table_id": "rtb-06cd349ca1ccbca1e",
            "subnet_id": "subnet-0a14dd0723613006a"
          },
          "dependencies": [
            "module.aws_vpc_prod.aws_internet_gateway.igw",
            "module.aws_vpc_prod.aws_route_table.public_route_table",
            "module.aws_vpc_prod.aws_subnet.public_subnet_a",
            "module.aws_vpc_prod.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc_prod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7ec24540339cd1d",
            "route_table_id": "rtb-06cd349ca1ccbca1e",
            "subnet_id": "subnet-0819df5e467683cde"
          },
          "dependencies": [
            "module.aws_vpc_prod.aws_internet_gateway.igw",
            "module.aws_vpc_prod.aws_route_table.public_route_table",
            "module.aws_vpc_prod.aws_subnet.public_subnet_b",
            "module.aws_vpc_prod.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc_prod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:757187952603:subnet/subnet-0a14dd0723613006a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "17.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a14dd0723613006a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "757187952603",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Prod Public Subnet A"
            },
            "tags_all": {
              "Name": "VPC Prod Public Subnet A"
            },
            "vpc_id": "vpc-043053cdc23f5c0b8"
          },
          "dependencies": [
            "module.aws_vpc_prod.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc_prod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:757187952603:subnet/subnet-0819df5e467683cde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "17.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0819df5e467683cde",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "757187952603",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Prod Public Subnet B"
            },
            "tags_all": {
              "Name": "VPC Prod Public Subnet B"
            },
            "vpc_id": "vpc-043053cdc23f5c0b8"
          },
          "dependencies": [
            "module.aws_vpc_prod.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc_prod",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:757187952603:vpc/vpc-043053cdc23f5c0b8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "17.2.0.0/16",
            "default_network_acl_id": "acl-02be0ca71fb9b5e56",
            "default_route_table_id": "rtb-01c0e73c311692510",
            "default_security_group_id": "sg-0e76b352ac3d56326",
            "dhcp_options_id": "dopt-08a5316f76229815d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-043053cdc23f5c0b8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01c0e73c311692510",
            "owner_id": "757187952603",
            "tags": {
              "Name": "Prod"
            },
            "tags_all": {
              "Name": "Prod"
            }
          }
        }
      ]
    },
    {
      "module": "module.aws_vpc_staging",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:757187952603:internet-gateway/igw-077c48e5a1335ee5a",
            "id": "igw-077c48e5a1335ee5a",
            "owner_id": "757187952603",
            "tags": {
              "Name": "Beta"
            },
            "tags_all": {
              "Name": "Beta"
            },
            "vpc_id": "vpc-0592adde7b2fd16dc"
          },
          "dependencies": [
            "module.aws_vpc_staging.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc_staging",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:757187952603:route-table/rtb-0f4eabf3ae6593d2e",
            "id": "rtb-0f4eabf3ae6593d2e",
            "owner_id": "757187952603",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-077c48e5a1335ee5a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTable"
            },
            "tags_all": {
              "Name": "PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0592adde7b2fd16dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc_staging.aws_internet_gateway.igw",
            "module.aws_vpc_staging.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc_staging",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04fe4ad346945743f",
            "route_table_id": "rtb-0f4eabf3ae6593d2e",
            "subnet_id": "subnet-0a86384eb26bce819"
          },
          "dependencies": [
            "module.aws_vpc_staging.aws_internet_gateway.igw",
            "module.aws_vpc_staging.aws_route_table.public_route_table",
            "module.aws_vpc_staging.aws_subnet.public_subnet_a",
            "module.aws_vpc_staging.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc_staging",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dcbe8a381383d788",
            "route_table_id": "rtb-0f4eabf3ae6593d2e",
            "subnet_id": "subnet-0db822f8a2f2ce482"
          },
          "dependencies": [
            "module.aws_vpc_staging.aws_internet_gateway.igw",
            "module.aws_vpc_staging.aws_route_table.public_route_table",
            "module.aws_vpc_staging.aws_subnet.public_subnet_b",
            "module.aws_vpc_staging.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc_staging",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:757187952603:subnet/subnet-0a86384eb26bce819",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "17.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a86384eb26bce819",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "757187952603",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Beta Public Subnet A"
            },
            "tags_all": {
              "Name": "VPC Beta Public Subnet A"
            },
            "vpc_id": "vpc-0592adde7b2fd16dc"
          },
          "dependencies": [
            "module.aws_vpc_staging.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc_staging",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:757187952603:subnet/subnet-0db822f8a2f2ce482",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "17.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db822f8a2f2ce482",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "757187952603",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Beta Public Subnet B"
            },
            "tags_all": {
              "Name": "VPC Beta Public Subnet B"
            },
            "vpc_id": "vpc-0592adde7b2fd16dc"
          },
          "dependencies": [
            "module.aws_vpc_staging.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc_staging",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:757187952603:vpc/vpc-0592adde7b2fd16dc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "17.1.0.0/16",
            "default_network_acl_id": "acl-06911dad64e7486c7",
            "default_route_table_id": "rtb-0a9a33adaef59da44",
            "default_security_group_id": "sg-092e4b14b576a82f6",
            "dhcp_options_id": "dopt-08a5316f76229815d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0592adde7b2fd16dc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a9a33adaef59da44",
            "owner_id": "757187952603",
            "tags": {
              "Name": "Beta"
            },
            "tags_all": {
              "Name": "Beta"
            }
          }
        }
      ]
    }
  ]
}